--- a/platypush/backend/http/static/css/source/common/vars.scss
+++ b/platypush/backend/http/static/css/source/common/vars.scss
@@ -7,7 +7,8 @@ $default-bg-5: #f8f8f8 !default;
 $default-fg: black !default;
 $default-fg-2: #333333 !default;
 $default-fg-3: #888888 !default;
-$default-font-size: 1.5rem !default;
+$default-font-size: 15px !default;
+$default-font-size-vertial: 25px !default;
 $default-shadow: 2px 2px 2px #ccc !default;
 $default-hover-fg: #35b870 !default;
 $default-hover-fg-2: #38cf80 !default;
